--- a/Docs/개발순서.md
+++ b/Docs/개발순서.md
@@ -1,9 +1,10 @@
 1. jsp 기본 화면 띄우기 [O]
 2. db 연결해보기 [0]
 3. 프로퍼티 분리 하기 [ ]
-4. rest api 컨트롤러 만들어 보기 [ ]
+4. rest api 컨트롤러 만들어 보기 [0]
 5. validator 사용해보기 [ ]
 6. logback 수정 [0]
 7. 테스트 코드 샘플 만들기 [0]
 8. swagger 적용하기 [ ]
 9. 암호화 적용하기
+10. PUT, 
