--- a/Docs/개발순서.md
+++ b/Docs/개발순서.md
@@ -1,10 +1,19 @@
-1. jsp 기본 화면 띄우기 [O]
-2. db 연결해보기 [0]
+
+# 개발 내용
+1. jsp 기본 화면 띄우기 [O] - 테스트 완료
+2. db 연결해보기 [0] - 테스트 완료
 3. 프로퍼티 분리 하기 [ ]
-4. rest api 컨트롤러 만들어 보기 [0]
-5. validator 사용해보기 [ ]
+4. rest api 컨트롤러 만들어 보기 [0] - 테스트 완료
+5. validator 사용해보기 [X] 
 6. logback 수정 [0]
-7. 테스트 코드 샘플 만들기 [0]
-8. swagger 적용하기 [ ]
-9. 암호화 적용하기
-10. PUT, 
+7. 테스트 코드 샘플 만들기 [0] 
+8. swagger 적용하기 [O]
+9. 암호화 적용하기 [ ]
+10. PUT, DELETE 추가 [ ]
+11. Transaction TransactionAdvisor 처리 [0] - 코드 적용된 상태. transaction이 rollback 되는지 확인 필요
+12. 
+
+# 이슈사항
+5. validation이 정상 작동하지 않음. 전자정부 자체 validation을
+쓰던지 아니면 프론트 단에서 처리를 해야할듯
+
