샘플 페이지 및 권한 적용

--- a/Docs/개발환경 세팅 가이드.md
+++ b/Docs/개발환경 세팅 가이드.md
@@ -1,9 +1,11 @@
-[설치 프로그램]
-2. 자바 설치 8버전
-3. node 설치
-4. postgresql 설치
+[설치해야 할 프로그램]
+1. 자바 설치 8버전
+2. node 설치
+3. postgresql 설치(로컬 테스트)
 
-[툴]
+[사용한 툴]
 1. intellij
 2. dbeaver
-3. source tree나 toltoise git 써도 무방
+3. source tree나 toltoise git  
+
+
